...
    
    var body: some View {
        HStack(spacing: 12) {
            if layoutDirection == .rightToLeft {
                // RTL: Primary button on RIGHT, Secondary on LEFT
                secondaryButton
                primaryButton
            } else {
                // LTR: Secondary button on LEFT, Primary on RIGHT
                secondaryButton
                primaryButton
            }
        }
...
