...
                                .foregroundColor(.secondary)
                                .font(.headline)
                                .id(locale)  // Force refresh when locale changes
                            
                            TextField(NSLocalizedString("amount", comment: "Amount"), text: $amount)
                                .keyboardType(.decimalPad)
                                .accessibilityIdentifier("transactionAmountTextField")
                        }
                        
                        DatePicker(NSLocalizedString("date", comment: "Date"), selection: $date, displayedComponents: .date)
                        Toggle(NSLocalizedString("income", comment: "Income"), isOn: $isIncome)
                            .accessibilityIdentifier("incomeToggle")
                        
...
